# Osmium

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  colorpicker.cpp  colorpicker.h  instrumentnames.cpp  instrumentnames.h  labeledslider.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.h  optionsdialog.ui  renderargs.h  resizableqlabel.cpp  resizableqlabel.h  resources.qrc  saveload.cpp  saveload.h  scoperenderer.cpp  scoperenderer.h  workers.cpp  workers.h
gui/: .gitignore  CMakeLists.txt  res.rc
gui/src/: config.cpp  config.h  instrumentnames.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  renderargs.h  saveload.h  scoperenderer.cpp  scoperenderer.h  workers.cpp  workers.h
gui/src/controls/: colorpicker.cpp  labeledslider.cpp  labeledslider.h  pathchooser.cpp  previewer.cpp  previewer.h
gui/src/xmacro/: h26x_preset.txt  video_codec.txt
osmium/: CMakeLists.txt  error.h  eventtracker.h  handlewrapper.cpp  handlewrapper.h  osmium.h  player.cpp  player.h  scope.cpp  scope.h  scopebuilder.cpp  scopebuilder.h
osmium/src/: error.cpp  error.h  eventtracker.cpp  eventtracker.h  handlewrapper.cpp  handlewrapper.h  osmium.cpp  osmium.h  player.cpp  scope.cpp  scope.h  scopebuilder.cpp  scopebuilder.h
src/: colorpicker.ui  instrumentnames.cpp  labeledslider.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.ui  pathchooser.cpp  previewer.cpp  previewer.h  resizableqlabel.h  saveload.cpp  scoperenderer.cpp  workers.cpp
src/controls/: pathchooser.cpp  pathchooser.h
